--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ reports
 # SASS
 .sass-cache
 bluebottle/common/static/css/*.css*
+bluebottle/common/static/css/admin/dashboard.css
 
 # Espresso
 *.esproj
