--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -21,7 +21,7 @@ django-compressor==1.3
 ember-compressor-compiler==0.3.1
 django-extensions==1.1.1
 django-filter==0.6
-django-fluent-contents==1.0c3 # Version 1.0b1 and up breaks our co
+django-fluent-contents==1.0c3
 django-iban==0.2.1
 django-localflavor==1.0
 django-social-auth==0.7.23
