--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ pip-log.txt
 
 # JS testing
 node_modules
-bluebottle/common/static/refactor-sass/lib
+frontend/static/refactor-sass/lib
 
 #Mr Developer
 .mr.developer.cfg
@@ -56,7 +56,7 @@ reports
 
 # SASS
 .sass-cache
-bluebottle/common/static/css/*.css*
+frontend/static/css/*.css*
 bluebottle/common/static/css/admin/dashboard.css
 
 # Espresso
