--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ reports
 
 # SASS
 .sass-cache
+frontend/static/.sass-cache
 frontend/static/css/*.css*
 bluebottle/common/static/css/admin/dashboard.css
 
