--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
 - '2.7'
@@ -8,7 +9,6 @@ install:
 - python setup.py install
 before_script:
 - echo "SECRET_KEY = 'secret key'" > bluebottle/settings/secrets.py
-- python setup.py install
 script:
 - python manage.py test
 notifications:
