--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 - pip install -e .[test]
 - createdb bluebottle_test
 before_script:
+- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
 - echo "SECRET_KEY = 'secret key'" > bluebottle/settings/secrets.py
 script:
 - python manage.py test
