more aggressive caching for travis / venv and set python version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: false
+language: python
 cache:
   directories:
   - $HOME/.pip-cache/
-language: python
+  - $HOME/virtualenv/python2.7.9/lib/python2.7/site-packages
 python:
-- '2.7'
+- '2.7.9'
 env:
 - DJANGO_SETTINGS_MODULE='bluebottle.settings.testing'
 install:
