--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ env:
 install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install -e .[test] --process-dependency-links
+- pip install flake8
 - createdb bluebottle_test
 - echo `psql --version`
+- flake8 bluebottle
 before_script:
 - curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
 - echo "SECRET_KEY = 'secret key'" > bluebottle/settings/secrets.py
