--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,5 @@ notifications:
       secure: A7SQlgtz1wTbt5wSpP5inxXAB7Gxmss6KIjnV0RdcU1jzKbf/umrAWgLIb/M6vr/zO/YwZCa60SkYm7yn0fGEU3fVjA7rWy5w1yllMEgxxEUy4E2DF1pL/0vryI4GwgcNzre0XA1o/Lx5/8cq6FB1fZ0V5yDyIl8xxMdWFb++X4=
     template:
     - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+after_success:
+- bash post_travis.sh
