Forgot one name_nl

--- a/bluebottle/bb_projects/fixtures/project_data.json
+++ b/bluebottle/bb_projects/fixtures/project_data.json
@@ -166,8 +166,7 @@
         "fields": {
             "slug": "education",
             "description": "",
-            "name": "Education",
-            "name_nl": "Onderwijs"
+            "name": "Education"
         }
     },
     {
