--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: python
 addons:
-  postgresql: "9.1"
+  postgresql: '9.1'
   apt:
     packages:
     - libxmlsec1
@@ -9,24 +9,25 @@ addons:
     - swig
 cache:
   directories:
-  - $HOME/.pip-cache/
-  - $HOME/virtualenv/python2.7.9/lib/python2.7/site-packages
+  - "$HOME/.pip-cache/"
+  - "$HOME/virtualenv/python2.7.9/lib/python2.7/site-packages"
 python:
-- '2.7.9'
+- 2.7.9
 env:
   global:
   - DJANGO_SETTINGS_MODULE='bluebottle.settings.testing'
-  # hipchat api key
-  - secure: "Sg0+/6mi9rIqXB24xLF0b5ZzC6V4TrZG3dNKpdI61PRTbAOlRfznwT00RZz6sQoL0s6LxLG52P3ipitqfMsPrb70CzYCK8+wgyTSvVYcbJLOTFycdwWIBghYqElXT0u8vfcu6RLGJD+8j8WsIFZ6P2pcZ0mHXyTcKEXNljov4Fw="
-  # hipchat room id
-  - secure: "iMKjQ8xllvNCzPfFdLBZ2Xqv83XF0bgUHrJTH2Q5R9BwtVwtbiWS//9mWMfVX4lumkZmlX6cwVOGDPBTJVEJv4k7GHza01Kp7ax3WHT/ll+K0j8AFMwbvHRJUPihKc5DWVVFir/xfW4qyKss6yNbn+M94ZbiRMcno/3NLNN2dKw="
+  # $GROUPNAME for the hipchat room name
+  - secure: B05yVl8sJf8UUJuda+8VB5CV+cyuqKLTEAK0t1n/1czX+FvkyXsNdE+5b81CTjPNOQwZMzw7kbDkhq65aJpn4Ni07TWP6bpdkuX1nY6Bf+S/brLgf4wlQ+Oibj1hWhyH2iiQ9gM0ONe28/d0y/C74/ISvIDn9MYFRkuCF0Vujzo=
+  # $APIKEY for the hipchat api auth
+  - secure: PUYWLPG0f1QTf1Q77/0ft636ZKQaIIjy0eHZCVpzVyRMW0XX9N5UXhbTPE1fPFt5aRNdNjGIWxOF/4SuIEhYEaZamGG3PBNqvXI530SkTNUbNVoeAcTleYbwcaVWeYdyK2P2k1YdNUt+BbRuYN2o9I8+2QmQvQsZEwugCG4+UH4=
 install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
 - createdb bluebottle_test
 - echo `psql --version`
 before_script:
-- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
+- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
+  | gunzip - > GeoIP.dat
 script:
 - python manage.py test
 notifications:
@@ -34,6 +35,6 @@ notifications:
     rooms:
       secure: A7SQlgtz1wTbt5wSpP5inxXAB7Gxmss6KIjnV0RdcU1jzKbf/umrAWgLIb/M6vr/zO/YwZCa60SkYm7yn0fGEU3fVjA7rWy5w1yllMEgxxEUy4E2DF1pL/0vryI4GwgcNzre0XA1o/Lx5/8cq6FB1fZ0V5yDyIl8xxMdWFb++X4=
     template:
-    - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+    - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
 after_success:
 - bash post_travis.sh
