--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: python
 addons:
-  postgresql: "9.1"
+  postgresql: '9.1'
   apt:
     packages:
     - libxmlsec1
@@ -9,24 +9,25 @@ addons:
     - swig
 cache:
   directories:
-  - $HOME/.pip-cache/
-  - $HOME/virtualenv/python2.7.9/lib/python2.7/site-packages
+  - "$HOME/.pip-cache/"
+  - "$HOME/virtualenv/python2.7.9/lib/python2.7/site-packages"
 python:
-- '2.7.9'
+- 2.7.9
 env:
   global:
   - DJANGO_SETTINGS_MODULE='bluebottle.settings.testing'
-  # hipchat APIKEY
-  - secure: "V1p+c1G+0Ux087FiMd9kvK4Fuuyb7qKoBcfjmmrTF32Q10Jx3vb/qRS9sAWK2xub61IGWRg7ysTmLGs/OENXls6dUpYOwn+mKYjabn1sIEBHud2ZqNrxtlW+HGJN5cgkq+Knm0DDUc21n6Brn2EAYTILbGUUwQVZBVQ7bBS6Va8="
-  # hipchat GROUPNAME
-  - secure: "gFWdFu8FCwFikHki+mhRWfM45tXRpQLRrGsXuN0mJ0IcMj65uzyQMMQtVkFX6OQcZRQuT6ky74z1+8chK9RcyPsnT1x4hMBqxEISzcnTVzXQhs8RQfxAVzY5W66Ql47VQo8XGLa9PfU0xjCGGLi1m57is6X9hR9I4WHuo0G8Ztc="
+  # $GROUPNAME for the hipchat room name
+  - secure: B05yVl8sJf8UUJuda+8VB5CV+cyuqKLTEAK0t1n/1czX+FvkyXsNdE+5b81CTjPNOQwZMzw7kbDkhq65aJpn4Ni07TWP6bpdkuX1nY6Bf+S/brLgf4wlQ+Oibj1hWhyH2iiQ9gM0ONe28/d0y/C74/ISvIDn9MYFRkuCF0Vujzo=
+  # $APIKEY for the hipchat api auth
+  - secure: PUYWLPG0f1QTf1Q77/0ft636ZKQaIIjy0eHZCVpzVyRMW0XX9N5UXhbTPE1fPFt5aRNdNjGIWxOF/4SuIEhYEaZamGG3PBNqvXI530SkTNUbNVoeAcTleYbwcaVWeYdyK2P2k1YdNUt+BbRuYN2o9I8+2QmQvQsZEwugCG4+UH4=
 install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
 - createdb bluebottle_test
 - echo `psql --version`
 before_script:
-- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
+- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
+  | gunzip - > GeoIP.dat
 script:
 - python manage.py test
 notifications:
@@ -34,6 +35,6 @@ notifications:
     rooms:
       secure: A7SQlgtz1wTbt5wSpP5inxXAB7Gxmss6KIjnV0RdcU1jzKbf/umrAWgLIb/M6vr/zO/YwZCa60SkYm7yn0fGEU3fVjA7rWy5w1yllMEgxxEUy4E2DF1pL/0vryI4GwgcNzre0XA1o/Lx5/8cq6FB1fZ0V5yDyIl8xxMdWFb++X4=
     template:
-    - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+    - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
 after_success:
 - bash post_travis.sh
