Update status names for tasks, task members and projects

--- a/bluebottle/bb_projects/fixtures/project_data.json
+++ b/bluebottle/bb_projects/fixtures/project_data.json
@@ -5,7 +5,7 @@
         "fields": {
             "viewable": false,
             "slug": "plan-new",
-            "name": "Plan - New",
+            "name": "Plan - Draft",
             "sequence": 1,
             "editable": true,
             "active": true,
@@ -43,7 +43,7 @@
         "model": "bb_projects.projectphase",
         "fields": {
             "viewable": true,
-            "name": "Voting",
+            "name": "Voting Running",
             "slug": "voting",
             "sequence": 4,
             "editable": false,
@@ -69,7 +69,7 @@
         "fields": {
             "viewable": true,
             "slug": "campaign",
-            "name": "Campaign",
+            "name": "Project - Running",
             "sequence": 6,
             "editable": false,
             "active": true,
@@ -81,7 +81,7 @@
         "model": "bb_projects.projectphase",
         "fields": {
             "viewable": true,
-            "name": "Done - Complete",
+            "name": "Project - Realised",
             "slug": "done-complete",
             "sequence": 8,
             "editable": true,
@@ -94,7 +94,7 @@
         "model": "bb_projects.projectphase",
         "fields": {
             "viewable": true,
-            "name": "Done - Incomplete",
+            "name": "Project - Done",
             "slug": "done-incomplete",
             "sequence": 9,
             "editable": false,
@@ -107,7 +107,7 @@
         "model": "bb_projects.projectphase",
         "fields": {
             "viewable": false,
-            "name": "Closed",
+            "name": "Rejected / Cancelled",
             "slug": "closed",
             "sequence": 10,
             "editable": false,
