Fix fixture name for voting status

--- a/bluebottle/bb_projects/fixtures/project_data.json
+++ b/bluebottle/bb_projects/fixtures/project_data.json
@@ -43,7 +43,7 @@
         "model": "bb_projects.projectphase",
         "fields": {
             "viewable": true,
-            "name": "Voting Running",
+            "name": "Voting - Running",
             "slug": "voting",
             "sequence": 4,
             "editable": false,
