--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
   - secure: PUYWLPG0f1QTf1Q77/0ft636ZKQaIIjy0eHZCVpzVyRMW0XX9N5UXhbTPE1fPFt5aRNdNjGIWxOF/4SuIEhYEaZamGG3PBNqvXI530SkTNUbNVoeAcTleYbwcaVWeYdyK2P2k1YdNUt+BbRuYN2o9I8+2QmQvQsZEwugCG4+UH4=
 install:
 - pip install --upgrade setuptools --use-mirrors
-- pip install -e .[test] --process-dependency-links --trusted-host github.com
+- pip install -e .[test] --process-dependency-links --trusted-host github.com --trusted-host bitbucket.org
 - createdb bluebottle_test
 - echo `psql --version`
 before_script:
