Update travis for coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
 install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
+- pip install coveralls
 - createdb bluebottle_test
 - echo `psql --version`
 before_script:
@@ -30,6 +31,7 @@ before_script:
   | gunzip - > GeoIP.dat
 script:
 - python manage.py test
+- coverage run --source=bluebottle manage.py test 
 notifications:
   hipchat:
     rooms:
@@ -38,3 +40,4 @@ notifications:
     - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
 after_success:
 - bash post_travis.sh
+- coveralls
