--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ install:
 - createdb bluebottle_test
 - echo `psql --version`
 before_script:
-- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
-  | gunzip - > GeoIP.dat
+- curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
+- flake8 .
 script:
 - python manage.py test
 notifications:
