--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ env:
 install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
-- pip uninstall flake8 -y
-- pip install --upgrade flake8
+- pip install --upgrade -I flake8
 - pip install --upgrade coverage
 - pip install coveralls
 - pip install --upgrade flake8
