--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
 - pip install --upgrade coverage
 - pip install coveralls
 - createdb bluebottle_test
+- psql -U postgres -c "create extension unaccent"
+- psql -U postgres -c "create extension pg_trgm"
 - echo `psql --version`
 before_script:
 - curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
