--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ install:
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
 - pip install --upgrade coverage
 - pip install coveralls
-- createdb bluebottle_test
-- psql -c 'CREATE EXTENSION IF NOT EXISTS "unaccent"; CREATE EXTENSION IF NOT EXISTS "pg_trgm";' -U postgres -d bluebottle_test
+- psql -c 'CREATE EXTENSION IF NOT EXISTS "unaccent"; CREATE EXTENSION IF NOT EXISTS "pg_trgm";' -U postgres -d test_bluebottle_test
 - echo `psql --version`
 before_script:
 - curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
