--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ install:
 - pip install --upgrade setuptools --use-mirrors
 - pip install --upgrade -I flake8
 - pip install -e .[test] --process-dependency-links --trusted-host github.com
-- pip install --upgrade coverage
-- pip install coveralls
+- pip install --upgrade coverage coveralls pyyaml
 - echo `psql --version`
 before_script:
 - curl https://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz | gunzip - > GeoIP.dat
